<resources>
    <string name="app_name">EParkingAdmin</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="login">Sing In</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="parking_fees">Parking Fees per hour</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="cancel">Cancel</string>
</resources>
