<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/bgColor"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/rounded_button"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:text="@string/register"
                    android:textColor="@color/bgColor"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/login_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/parking_fees" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/rounded_button"
                    android:fontFamily="@font/helvetica_neue_medium"
                    android:text="Already Register, LOGIN"
                    android:textAllCaps="false"
                    android:textColor="@color/bgColor"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_button" />

                <EditText
                    android:id="@+id/user_email"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/helvetica_neue"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint_color"
                    app:layout_constraintBottom_toTopOf="@+id/user_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_name" />

                <EditText
                    android:id="@+id/user_password"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/helvetica_neue"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint_color"
                    app:layout_constraintBottom_toTopOf="@+id/organisation_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_email" />

                <EditText
                    android:id="@+id/organisation_name"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_location_city_black_24dp"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/helvetica_neue"
                    android:hint="@string/organisation_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint_color"
                    app:layout_constraintBottom_toTopOf="@+id/parking_fees"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_password" />

                <EditText
                    android:id="@+id/parking_fees"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_rupee"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/helvetica_neue"
                    android:hint="@string/parking_fees"
                    android:inputType="numberDecimal"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint_color"
                    app:layout_constraintBottom_toTopOf="@+id/register_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/organisation_name" />

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/helvetica_neue"
                    android:hint="@string/user_name"
                    android:inputType="textPersonName"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint_color"
                    app:layout_constraintBottom_toTopOf="@+id/user_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/hint_color"
                    app:layout_constraintBottom_toTopOf="@+id/user_password"
                    app:layout_constraintEnd_toEndOf="@+id/user_email"
                    app:layout_constraintStart_toStartOf="@+id/user_email"
                    app:layout_constraintTop_toBottomOf="@+id/user_email" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/hint_color"
                    app:layout_constraintBottom_toTopOf="@+id/user_password"
                    app:layout_constraintEnd_toEndOf="@+id/organisation_name"
                    app:layout_constraintStart_toStartOf="@+id/organisation_name"
                    app:layout_constraintTop_toBottomOf="@+id/organisation_name" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/hint_color"
                    app:layout_constraintBottom_toTopOf="@+id/organisation_name"
                    app:layout_constraintEnd_toEndOf="@+id/parking_fees"
                    app:layout_constraintStart_toStartOf="@+id/parking_fees"
                    app:layout_constraintTop_toBottomOf="@+id/parking_fees" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/hint_color"
                    app:layout_constraintBottom_toTopOf="@+id/user_name"
                    app:layout_constraintEnd_toEndOf="@+id/user_email"
                    app:layout_constraintStart_toStartOf="@+id/user_email"
                    app:layout_constraintTop_toBottomOf="@+id/user_email" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>


    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>